@startuml
class Galaxy extends CelestialObject {
-_systems : List<SolarSystem>
-_type : string
+Systems : IList<SolarSystem>
+Type : string
+Add() : void
+Remove() : bool
}

class SolarSystem extends CelestialObject {
-bodies : List<CelestialBodyWithCore>
+Bodies : IList<CelestialBodyWithCore>
+Add() : void
-AddBody() : void
-AddStar() : void
+Remove() : void
}

abstract class CelestialObject {
-_name : string
+Name : string
+ToString() : string
}

abstract class CelestialBody extends CelestialObject {
#_mass : double
#_radius : double
#EarthMass : double
#SolarMass : double
+Area : double
+Density : double
+Mass : double
+Radius: double
+Volume : double
-CalculateArea() : double
-CalculateDensity() : double
-CalculateVolume() : double
+CompareTo() : int
+Equals() : bool
+GetHashCode() : int
+GetLargest() : CelestialBody
+GetMostDense() : CelestialBody
}

abstract class CelestialBodyWithCore extends CelestialBody {
#_coreSize : double
+Core : double
+CoreSize : double
-CalculateCore() : double
}

class Star extends CelestialBodyWithCore {
-_corona : double
+Corona : double
}

class Planet extends CelestialBodyWithCore {
-_moons : List<Moon>
+Moons : IList<Moon>
+Add() : void
-Remove() : bool
}

class Moon extends CelestialBody {
}

Planet "1" *-- "N" Moon
Moon o-- Planet
SolarSystem "1" *-- "3" Star
SolarSystem "1" *-- "N" Planet
Planet o-- SolarSystem
Star o-- SolarSystem
Galaxy "1" *-- "N" SolarSystem
SolarSystem o-- Galaxy
@enduml